k8s/worker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
spec:
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: ghcr.io/andresmarinabad/epub-to-audiobook/backend:latest
          imagePullPolicy: Always
          command: ["/bin/bash", "/app/entrypoint-worker.sh"]
          volumeMounts:
            - name: output
              mountPath: /app/output
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
      volumes:
        - name: output
          persistentVolumeClaim:
            claimName: output
