k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: epub-to-audiobook
spec:
  ingressClassName: traefik
  rules:
    - host: epub-to-audiobook.devops.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
    - host: flower.devops.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flower
                port:
                  number: 5555
